Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 <p>slidePage 是一个简单却可以很强大的滚动插件，不提供各种花俏的UI组件，只提供实用的功能接口，方便二次开发。 </p>
 </blockquote>
 
-<p>Demo:<a href="http://lipten.link/projects/slidePage/demo.html">http://lipten.link/projects/slidePage/demo.html</a>
-<img src="http://lipten.link/projects/slidePage/demo.gif" alt="demo"> </p>
+<p>Demo:<a href="http://lipten.link/projects/slidePage/demo.html">http://lipten.link/projects/slidePage/demo.html</a></p>
+
+<p><img src="http://lipten.link/projects/slidePage/demo.gif" alt="demo"> </p>
 
 <h3>
 <a id="-update-v20-" class="anchor" href="#-update-v20-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v2.0-</h3>
