--- a/demo.html
+++ b/demo.html
@@ -107,8 +107,11 @@
             margin-top:-20px;
             margin-left: -50px;
             width:100px;
-            height:40px;
-            line-height: 40px;
+            height:100px;
+            -webkit-border-radius:50%;
+            -moz-border-radius:50%;
+            border-radius:50%;
+            line-height: 100px;
             background-color: rgb(178, 79, 65);
             color: #fff;
             text-align: center;
@@ -130,8 +133,11 @@
             margin-top:-20px;
             margin-left: -50px;
             width:100px;
-            height:40px;
-            line-height: 40px;
+            height:100px;
+            webkit-border-radius:50%;
+            -moz-border-radius:50%;
+            border-radius:50%;
+            line-height: 100px;
             background-color: rgb(47, 95, 178);
             color: #fff;
             text-align: center;
@@ -388,8 +394,7 @@
         <div class="next-page" onclick="slidePage.next()">V</div>
     </nav>
 </div>
-<script src="http://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
-
+<script src="http://cdn.bootcss.com/zepto/1.1.6/zepto.min.js"></script>
 <script type="text/javascript" src="slidePage-touch.js"></script>
 <script type="text/javascript" src="slidePage.js"></script>
 
