--- a/examples/fullFeatured.html
+++ b/examples/fullFeatured.html
@@ -381,7 +381,7 @@
 		var initPage = pageParams || 1
 		var currentPage = initPage
 		var slide = new slidePage({
-			slidepage: '.slide-page',
+			slidePages: '.slide-page',
 			slideContainer: '#slidePage-container',
 			refresh: true,
 			page: initPage,
