add local server

--- a/examples/custom.html
+++ b/examples/custom.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="cache-control" content="max-age=0" />
 	<meta http-equiv="cache-control" content="no-cache" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 	<title>custom - slidePage.js</title>
 	<!-- 不引入任何样式文件 -->
 	<style type="text/css">
@@ -295,7 +296,7 @@
 			<div class="next-page" onclick="slide.slideNext()">V</div>
 		</nav>
 	</div>
-	<script type="text/javascript" src="../dist/slidePage.min.js"></script>
+	<script type="text/javascript" src="/dist/slidePage.min.js"></script>
 	<script type="text/javascript">
 		function GetQueryString(name){
 			var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
