--- a/examples/fullFeatured.html
+++ b/examples/fullFeatured.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="cache-control" content="no-cache" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>fullFeatured - slidePage.js</title>
-	<link rel="stylesheet" type="text/css" href="../slidePage.css">
+	<link rel="stylesheet" type="text/css" href="/dist/slidePage.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 	<style type="text/css">
 		html,
@@ -368,7 +368,7 @@
 			<div class="next-page" onclick="slide.slideNext()">V</div>
 		</nav>
 	</div>
-	<script type="text/javascript" src="../dist/slidePage.min.js"></script>
+	<script type="text/javascript" src="/dist/slidePage.min.js"></script>
 	<script type="text/javascript">
 		function GetQueryString(name){
 			var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
